Big change!The files have been put into different packages to make the project more reasonably-constructed.

--- a/MyCameraApp/res/layout/color_blob_detection_surface_view.xml
+++ b/MyCameraApp/res/layout/color_blob_detection_surface_view.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <com.test.activity.Tutorial3View
+    <com.camera.view.Tutorial3View
         android:id="@+id/color_blob_detection_activity_surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
