--- a/MyCameraApp/res/layout/fragment_main.xml
+++ b/MyCameraApp/res/layout/fragment_main.xml
@@ -6,6 +6,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.test.activity.MainActivity$PlaceholderFragment" >
+    tools:context="com.camera.activity.MainActivity$PlaceholderFragment" >
 
 </RelativeLayout>
